[gd_scene format=3 uid="uid://cqcqf7kf645el"]

[ext_resource type="Texture2D" uid="uid://r2pp266ni5dl" path="res://Assets/Clouds 1/1.png" id="1_1rerr"]
[ext_resource type="Script" uid="uid://b5270icmglga6" path="res://Scripts/menu.gd" id="1_cayip"]
[ext_resource type="Texture2D" uid="uid://b61bcigiqrvic" path="res://Assets/Clouds 1/4.png" id="2_xhh6f"]
[ext_resource type="AudioStream" uid="uid://c3ka1sn6q51lh" path="res://Music/ClickSFX.mp3" id="4_158mb"]
[ext_resource type="AudioStream" uid="uid://c5ptttvwd8qw1" path="res://Music/BackSFX.mp3" id="5_wwsa2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xhh6f"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_158mb"]
bg_color = Color(0.3500639, 0.35006398, 0.3500638, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cayip"]
bg_color = Color(0.25275353, 0.2527536, 0.25275344, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wwsa2"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jsrd8"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wbdvm"]
bg_color = Color(0.43519226, 0.4351923, 0.43519217, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q3rjx"]
bg_color = Color(0.5963672, 0.59636724, 0.59636724, 1)

[node name="Menu" type="Control" unique_id=1168137118]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cayip")
metadata/_edit_lock_ = true

[node name="BG" type="Control" parent="." unique_id=846688774]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="BG" unique_id=1756525386]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_1rerr")

[node name="TextureRect2" type="TextureRect" parent="BG" unique_id=1618178950]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect3" type="TextureRect" parent="BG" unique_id=218155618]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_xhh6f")

[node name="TextureRect4" type="TextureRect" parent="BG" unique_id=2080910399]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="VBoxContainer" parent="." unique_id=160140805]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.5
offset_top = -77.0
offset_right = 105.5
offset_bottom = 143.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Play" type="Button" parent="Button" unique_id=406549962]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_xhh6f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_158mb")
theme_override_styles/hover = SubResource("StyleBoxFlat_cayip")
text = "Play"

[node name="Options" type="Button" parent="Button" unique_id=100769628]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_xhh6f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_158mb")
theme_override_styles/hover = SubResource("StyleBoxFlat_cayip")
text = "Options"

[node name="Exit" type="Button" parent="Button" unique_id=694051750]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_xhh6f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_158mb")
theme_override_styles/hover = SubResource("StyleBoxFlat_cayip")
text = "Exit"

[node name="Title" type="Label" parent="." unique_id=1137129607]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -149.5
offset_top = 72.0
offset_right = 149.5
offset_bottom = 155.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "The Punks"

[node name="OptionsPanel" type="Panel" parent="." unique_id=954742853]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -395.5
offset_top = -268.75
offset_right = 395.5
offset_bottom = 268.75
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wwsa2")

[node name="Title" type="Label" parent="OptionsPanel" unique_id=627192643]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -95.5
offset_top = 58.75
offset_right = 95.5
offset_bottom = 127.75
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="OptionsPanel" unique_id=1047416029]
layout_mode = 0
offset_left = 34.5
offset_top = 31.75
offset_right = 170.0
offset_bottom = 91.5
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_jsrd8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wbdvm")
theme_override_styles/hover = SubResource("StyleBoxFlat_q3rjx")
text = "Back"

[node name="Label" type="Label" parent="OptionsPanel" unique_id=329494132]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = -27.5
offset_right = 48.5
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "W.I.P"

[node name="Click" type="AudioStreamPlayer" parent="." unique_id=56037117]
stream = ExtResource("4_158mb")

[node name="Back" type="AudioStreamPlayer" parent="." unique_id=521796946]
stream = ExtResource("5_wwsa2")

[connection signal="pressed" from="Button/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Button/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Button/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="OptionsPanel/Back" to="." method="_on_back_pressed"]
